--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <p class="fecha">
         <small>15 de Febrero del 2019</small>
-        <b>Redactado por: Carlos Emilio Ibarra</b>
+        <b>Redactado por: Sheyla Huarcayo Ibarra</b>
       </p>
     </header>
 
